# newborn-diary

./: .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  README.md  alembic.ini  cli.py  conftest.py  docker-compose.dev.yml  main.py  pyproject.toml  pytest.ini  settings.benchmark.yml  settings.dev.yml  settings.py  settings.test.yml  settings.yml.example
.github/workflows/: ci.yml
.memory/: src.md
application/: dto.py  ports.py  use_cases.py
application/repositories/: event_repository.py
application/services/: agentic_qa_service.py  event_parser.py  event_parser_tests.py  llm_client.py  qa_router.py  qa_service.py  schema_prompt.py  sql_tool.py  telegram_export_importer.py
benchmarks/: __init__.py  ask.py  event_parser.py
benchmarks/iterations/ask/: 20260510T212154Z.md  (+35 more)
docker-init/: create_test_db.sql
domain/: event.py
infrastructure/: composition.py  llm_client.py  sql_executor.py
infrastructure/dependencies/: __init__.py  db_session.py  llm.py  use_cases.py
infrastructure/endpoints/: __init__.py  router.py  version.py
infrastructure/metrics/: main.py
infrastructure/migrations/: env.py
infrastructure/models/: __init__.py  event.py
infrastructure/repositories/: event_repository.py
tests/: agentic_qa_service_tests.py  ask_benchmark_tests.py  ask_endpoint_tests.py  conftest.py  event_parser_benchmark_tests.py  event_repository_tests.py  event_use_case_tests.py  events_endpoint_tests.py  llm_client_tests.py  qa_router_tests.py  schema_prompt_tests.py  settings_tests.py  sql_tool_tests.py  version_endpoint_tests.py
tests/lib/: fixtures.py
(+48 files in other folders)
