[project]
name = "newborn_diary"
version = "0.1.0"
description = "Newborn activity diary"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.27",
    "openai>=1.50.0",
    "prometheus-client>=0.24.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.48",
    "sqlglot>=26.0.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-import-order>=0.19.2",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "types-pyyaml>=6.0.12.20250915",
]
